Added the header section and footer
added anchor links of my profile and the projects profile to the footer section

--- a/index.html
+++ b/index.html
@@ -5,5 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StormiCast</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <form action="">
+        <input type="text" placeholder="Enter a city.." />
+        <input type="button" value="Search" />
+      </form>
+    </header>
+
+    <footer>
+      <p>
+        This project was coded by
+        <a href="https://github.com/Kgothatso12">Kgothatso S Maluleke,</a>
+        <a href="https://github.com/Kgothatso12/StormiCast"
+          >is open-sourced in Git-Hub</a
+        >
+        and
+        <a href="https://stormicast-weather-app.netlify.app/"
+          >hosted on Netlify</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
