added main contents in html

--- a/index.html
+++ b/index.html
@@ -12,16 +12,31 @@
         <input type="button" value="Search" />
       </form>
     </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>Sunday 11:55, overcast clouds Humidity: 94%, Wind: 4.63km/h</p>
+      </div>
+      <div>6 °C</div>
+    </main>
 
     <footer>
       <p>
         This project was coded by
-        <a href="https://github.com/Kgothatso12">Kgothatso S Maluleke,</a>
-        <a href="https://github.com/Kgothatso12/StormiCast"
+        <a href="https://github.com/Kgothatso12" target="_blank" rel="noopener"
+          >Kgothatso S Maluleke,</a
+        >
+        <a
+          href="https://github.com/Kgothatso12/StormiCast"
+          target="_blank"
+          rel="noopener"
           >is open-sourced in Git-Hub</a
         >
         and
-        <a href="https://stormicast-weather-app.netlify.app/"
+        <a
+          href="https://stormicast-weather-app.netlify.app/"
+          target="_blank"
+          rel="noopener"
           >hosted on Netlify</a
         >
       </p>
