--- a/index.html
+++ b/index.html
@@ -4,43 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+      rel="stylesheet"
+    />
     <title>StormiCast</title>
   </head>
   <body>
-    <header>
-      <form action="">
-        <input type="text" placeholder="Enter a city.." />
-        <input type="button" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>Sunday 11:55, overcast clouds Humidity: 94%, Wind: 4.63km/h</p>
-      </div>
-      <div>6 °C</div>
-    </main>
+    <div class="weather-container">
+      <header>
+        <form action="">
+          <input
+            type="text"
+            placeholder="Enter a city.."
+            class="search-input"
+          />
+          <input type="button" value="Search" class="search-button" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>Sunday 11:55, overcast clouds Humidity: 94%, Wind: 4.63km/h</p>
+        </div>
+        <div>6 °C</div>
+      </main>
 
-    <footer>
-      <p>
-        This project was coded by
-        <a href="https://github.com/Kgothatso12" target="_blank" rel="noopener"
-          >Kgothatso S Maluleke,</a
-        >
-        <a
-          href="https://github.com/Kgothatso12/StormiCast"
-          target="_blank"
-          rel="noopener"
-          >is open-sourced in Git-Hub</a
-        >
-        and
-        <a
-          href="https://stormicast-weather-app.netlify.app/"
-          target="_blank"
-          rel="noopener"
-          >hosted on Netlify</a
-        >
-      </p>
-    </footer>
+      <footer>
+        <p>
+          This project was coded by
+          <a
+            href="https://github.com/Kgothatso12"
+            target="_blank"
+            rel="noopener"
+            >Kgothatso S Maluleke,</a
+          >
+          <a
+            href="https://github.com/Kgothatso12/StormiCast"
+            target="_blank"
+            rel="noopener"
+            >is open-sourced in Git-Hub</a
+          >
+          and
+          <a
+            href="https://stormicast-weather-app.netlify.app/"
+            target="_blank"
+            rel="noopener"
+            >hosted on Netlify</a
+          >
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
