--- a/index.html
+++ b/index.html
@@ -20,16 +20,31 @@
             type="text"
             placeholder="Enter a city.."
             class="search-input"
+            required
           />
           <input type="button" value="Search" class="search-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>Sunday 11:55, overcast clouds Humidity: 94%, Wind: 4.63km/h</p>
+        <div class="weather-main-contents">
+          <div class="current-weather">
+            <h1>Paris</h1>
+            <p>
+              Sunday 11:55, overcast clouds Humidity: <strong>94%</strong>,
+              Wind: <strong>4.63km/h</strong>
+            </p>
+          </div>
+          <div class="weather-temperature-contents">
+            <div class="weather-icon">
+              <img
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+                class="weather-app-icon"
+                alt="weather-icon"
+              />
+            </div>
+            <div class="current-units">6°C</div>
+          </div>
         </div>
-        <div>6 °C</div>
       </main>
 
       <footer>
