--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <title>StormiCast</title>
   </head>
   <body>
@@ -20,6 +21,7 @@
             type="text"
             placeholder="Enter a city.."
             class="search-input"
+            id="search-input"
             required
           />
           <input type="button" value="Search" class="search-button" />
@@ -72,5 +74,6 @@
         </p>
       </footer>
     </div>
+    <script src="src/app.js"></script>
   </body>
 </html>
