Added JS for functionality

--- a/index.html
+++ b/index.html
@@ -33,20 +33,14 @@
           <div class="current-weather">
             <h1 id="city"></h1>
             <p>
-              Sunday 11:55,
+              <span id="time"></span>,
               <span id="current-forecast"></span> Humidity:
               <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-temperature-contents">
-            <div class="weather-icon">
-              <img
-                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
-                class="weather-app-icon"
-                alt="weather-icon"
-              />
-            </div>
+            <div class="weather-icon" id="weather-icon"></div>
             <div class="current-units" id="current-units">6°C</div>
           </div>
         </div>
