added the HTML and CSS for forecast

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
             <div class="current-units" id="current-units">6°C</div>
           </div>
         </div>
+        <div id="upcoming-forecast">
+          <div class="upcoming-days">Mon</div>
+          <div class="weather-icon"></div>
+          <div class="weather-forecast-temperature">
+            <span class="weather-forecast-max"> 28°</span>
+            <span class="weather-forecast-min">9°</span>
+          </div>
+        </div>
       </main>
 
       <footer>
